# looba-mcp

./: .gitignore  MANIFEST.in  README.md  index.js  package-lock.json  package.json  pyproject.toml
looba_mcp/: __init__.py  __main__.py
looba_mcp/server/: index.js  install.js  package-lock.json  package.json
scripts/: postinstall.js
